--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <label class="form-label" for="city">Search for a City:</label>
                     <input name="city" id="city" type="text" placeholder="San Diego" autofocus="true" class="form-input"/>
                     <button type="submit" class="btn btn-search">Search</button>
+                    <div class="btn-container"></div>
                 </form>
             </div>
             <div id="results-container" class="col-8">
