basic style for forecast DOM elements and js pseudocode outline

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="forecast-intro" class="row">
                 </div>
                 <!-- 5 day forecast display -->
-                <div id="forecast" class="row">
+                <div id="forecast-future" class="row">
                 </div>
             </div>
         </div>
