--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <div id="results-container" class="col-8">
                 <!-- search results of weather displayed here through js DOM-->
                 <div id="forecast-current" class="row">
+                    <h2 id="current-city"></h2>
+                    <p id="current-temp" class="weather-data"></p><br>
+                    <p id="current-wind" class="weather-data"></p><br>
+                    <p id="current-humidity" class="weather-data"></p><br>
+                    <p id="current-uvi" class="weather-data"></p><br>
                 </div>
                 <div id="forecast-intro" class="row">
                 </div>
@@ -32,6 +37,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
