uv index color indicator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p id="current-temp" class="weather-data"></p><br>
                     <p id="current-wind" class="weather-data"></p><br>
                     <p id="current-humidity" class="weather-data"></p><br>
-                    <p id="current-uvi" class="weather-data"><span class="uvi"></span></p><br>
+                    <p id="current-uvi" class="weather-data"><span id="uvi"> </span></p><br>
                 </div>
                 <div id="forecast-intro" class="row">
                 </div>
