5 day forecast display

--- a/index.html
+++ b/index.html
@@ -27,12 +27,57 @@
                     <p id="current-temp" class="weather-data"></p><br>
                     <p id="current-wind" class="weather-data"></p><br>
                     <p id="current-humidity" class="weather-data"></p><br>
-                    <p id="current-uvi" class="weather-data"><span id="uvi"> </span></p><br>
+                    <p id="current-uvi" class="weather-data"><span id="uvi" class="uvi"> </span></p><br>
                 </div>
                 <div id="forecast-intro" class="row">
                 </div>
                 <!-- 5 day forecast display -->
                 <div id="forecast-future" class="row">
+                    <div class="card forecast-day-1">
+                        <div class="card-body">
+                            <h2 class="card-title" id="forecast-date-0"></h2>
+                            <img class="card-img" id="forecast-icon-0">
+                            <p class="card-text" id="forecast-temp-0"></p>
+                            <p class="card-text" id="forecast-wind-0"></p>
+                            <p class="card-text" id="forecast-humidity-0"></p>
+                        </div>
+                    </div>
+                    <div class="card forecast-day-2">
+                        <div class="card-body">
+                            <h2 class="card-title" id="forecast-date-1"></h2>
+                            <img class="card-img" id="forecast-icon-1">
+                            <p class="card-text" id="forecast-temp-1"></p>
+                            <p class="card-text" id="forecast-wind-1"></p>
+                            <p class="card-text" id="forecast-humidity-1"></p>
+                        </div>
+                    </div>
+                    <div class="card forecast-day-3">
+                        <div class="card-body">
+                            <h2 class="card-title" id="forecast-date-2"></h2>
+                            <img class="card-img" id="forecast-icon-2">
+                            <p class="card-text" id="forecast-temp-2"></p>
+                            <p class="card-text" id="forecast-wind-2"></p>
+                            <p class="card-text" id="forecast-humidity-2"></p>
+                        </div>
+                    </div>
+                    <div class="card forecast-day-4">
+                        <div class="card-body">
+                            <h2 class="card-title" id="forecast-date-3"></h2>
+                            <img class="card-img" id="forecast-icon-3">
+                            <p class="card-text" id="forecast-temp-3"></p>
+                            <p class="card-text" id="forecast-wind-3"></p>
+                            <p class="card-text" id="forecast-humidity-3"></p>
+                        </div>
+                    </div>
+                    <div class="card forecast-day-5">
+                        <div class="card-body">
+                            <h2 class="card-title" id="forecast-date-4"></h2>
+                            <img class="card-img" id="forecast-icon-4">
+                            <p class="card-text" id="forecast-temp-4"></p>
+                            <p class="card-text" id="forecast-wind-4"></p>
+                            <p class="card-text" id="forecast-humidity-4"></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
