forecast intro style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <!-- 5 day forecast display -->
                 <div id="forecast-future" class="row">
-                    <div class="card forecast-day-1">
+                    <div id="card" class="forecast-day-1">
                         <div class="card-body">
                             <h2 class="card-title" id="forecast-date-0"></h2>
                             <img class="card-img" id="forecast-icon-0">
@@ -42,7 +42,7 @@
                             <p class="card-text" id="forecast-humidity-0"></p>
                         </div>
                     </div>
-                    <div class="card forecast-day-2">
+                    <div id="card" class="forecast-day-2">
                         <div class="card-body">
                             <h2 class="card-title" id="forecast-date-1"></h2>
                             <img class="card-img" id="forecast-icon-1">
@@ -51,7 +51,7 @@
                             <p class="card-text" id="forecast-humidity-1"></p>
                         </div>
                     </div>
-                    <div class="card forecast-day-3">
+                    <div id="card" class="forecast-day-3">
                         <div class="card-body">
                             <h2 class="card-title" id="forecast-date-2"></h2>
                             <img class="card-img" id="forecast-icon-2">
@@ -60,7 +60,7 @@
                             <p class="card-text" id="forecast-humidity-2"></p>
                         </div>
                     </div>
-                    <div class="card forecast-day-4">
+                    <div id="card" class="forecast-day-4">
                         <div class="card-body">
                             <h2 class="card-title" id="forecast-date-3"></h2>
                             <img class="card-img" id="forecast-icon-3">
@@ -69,7 +69,7 @@
                             <p class="card-text" id="forecast-humidity-3"></p>
                         </div>
                     </div>
-                    <div class="card forecast-day-5">
+                    <div id="card" class="forecast-day-5">
                         <div class="card-body">
                             <h2 class="card-title" id="forecast-date-4"></h2>
                             <img class="card-img" id="forecast-icon-4">
