--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header><h1 class="title">Weather Dashboard</h1></header>
     <div class="container">
         <div class="row">
-            <div id="search-container" class ="col-4">
+            <div id="search-container" class ="col-3">
                 <form id="user-form">
                     <label class="form-label" for="city">Search for a City:</label>
-                    <input name="city" id="city" type="text" placeholder="San Diego" autofocus="true" class="form-input"/>
+                    <input name="city" id="city" type="text" placeholder="San Diego, CA" autofocus="true" class="form-input"/>
                     <button type="submit" class="btn btn-search">Search</button>
-                    <div class="btn-container" id="btn-city"></div>
+                    <div id="btn-container"></div>
                 </form>
             </div>
-            <div id="results-container" class="col-8">
+            <div id="results-container" class="col-9">
                 <!-- search results of weather displayed here through js DOM-->
                 <div id="forecast-current" class="row">
                     <h2 id="current-city"></h2>
@@ -32,50 +32,50 @@
                 <div id="forecast-intro" class="row">
                 </div>
                 <!-- 5 day forecast display -->
-                <div id="forecast-future" class="row">
-                    <div id="card" class="forecast-day-1">
-                        <div class="card-body">
-                            <h2 class="card-title" id="forecast-date-0"></h2>
-                            <img class="card-img" id="forecast-icon-0">
-                            <p class="card-text" id="forecast-temp-0"></p>
-                            <p class="card-text" id="forecast-wind-0"></p>
-                            <p class="card-text" id="forecast-humidity-0"></p>
-                        </div>
-                    </div>
-                    <div id="card" class="forecast-day-2">
-                        <div class="card-body">
-                            <h2 class="card-title" id="forecast-date-1"></h2>
+                <div id="forecast-future" class="row d-flex flex-row">
+                    <div id="card-1" class="forecast-day-1">
+                        <div class="card-body p-2 flex-column">
+                            <h6 class="day-title" id="forecast-date-1"></h6>
                             <img class="card-img" id="forecast-icon-1">
                             <p class="card-text" id="forecast-temp-1"></p>
                             <p class="card-text" id="forecast-wind-1"></p>
                             <p class="card-text" id="forecast-humidity-1"></p>
                         </div>
                     </div>
-                    <div id="card" class="forecast-day-3">
-                        <div class="card-body">
-                            <h2 class="card-title" id="forecast-date-2"></h2>
+                    <div id="card-2" class="forecast-day-2">
+                        <div class="card-body p-2">
+                            <h6 class="day-title" id="forecast-date-2"></h6>
                             <img class="card-img" id="forecast-icon-2">
                             <p class="card-text" id="forecast-temp-2"></p>
                             <p class="card-text" id="forecast-wind-2"></p>
                             <p class="card-text" id="forecast-humidity-2"></p>
                         </div>
                     </div>
-                    <div id="card" class="forecast-day-4">
-                        <div class="card-body">
-                            <h2 class="card-title" id="forecast-date-3"></h2>
+                    <div id="card-3" class="forecast-day-3">
+                        <div class="card-body p-2">
+                            <h6 class="day-title" id="forecast-date-3"></h6>
                             <img class="card-img" id="forecast-icon-3">
                             <p class="card-text" id="forecast-temp-3"></p>
                             <p class="card-text" id="forecast-wind-3"></p>
                             <p class="card-text" id="forecast-humidity-3"></p>
                         </div>
                     </div>
-                    <div id="card" class="forecast-day-5">
-                        <div class="card-body">
-                            <h2 class="card-title" id="forecast-date-4"></h2>
+                    <div id="card-4" class="forecast-day-4">
+                        <div class="card-body p-2">
+                            <h6 class="day-title" id="forecast-date-4"></h6>
                             <img class="card-img" id="forecast-icon-4">
                             <p class="card-text" id="forecast-temp-4"></p>
                             <p class="card-text" id="forecast-wind-4"></p>
                             <p class="card-text" id="forecast-humidity-4"></p>
+                        </div>
+                    </div>
+                    <div id="card-5" class="forecast-day-5">
+                        <div class="card-body p-2">
+                            <h6 class="day-title" id="forecast-date-5"></h6>
+                            <img class="card-img" id="forecast-icon-5">
+                            <p class="card-text" id="forecast-temp-5"></p>
+                            <p class="card-text" id="forecast-wind-5"></p>
+                            <p class="card-text" id="forecast-humidity-5"></p>
                         </div>
                     </div>
                 </div>
