--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div id="forecast-intro" class="row">
                 </div>
                 <!-- 5 day forecast display -->
-                <div id="forecast-future" class="row d-flex flex-row">
-                    <div id="card-1" class="forecast-day-1">
+                <div id="forecast-future" class="row forecast-future">
+                    <div id="card-1" class="forecast-day">
                         <div class="card-body p-2 flex-column">
                             <h6 class="day-title" id="forecast-date-1"></h6>
                             <img class="card-img" id="forecast-icon-1">
@@ -42,7 +42,7 @@
                             <p class="card-text" id="forecast-humidity-1"></p>
                         </div>
                     </div>
-                    <div id="card-2" class="forecast-day-2">
+                    <div id="card-2" class="forecast-day">
                         <div class="card-body p-2">
                             <h6 class="day-title" id="forecast-date-2"></h6>
                             <img class="card-img" id="forecast-icon-2">
@@ -51,7 +51,7 @@
                             <p class="card-text" id="forecast-humidity-2"></p>
                         </div>
                     </div>
-                    <div id="card-3" class="forecast-day-3">
+                    <div id="card-3" class="forecast-day">
                         <div class="card-body p-2">
                             <h6 class="day-title" id="forecast-date-3"></h6>
                             <img class="card-img" id="forecast-icon-3">
@@ -60,7 +60,7 @@
                             <p class="card-text" id="forecast-humidity-3"></p>
                         </div>
                     </div>
-                    <div id="card-4" class="forecast-day-4">
+                    <div id="card-4" class="forecast-day">
                         <div class="card-body p-2">
                             <h6 class="day-title" id="forecast-date-4"></h6>
                             <img class="card-img" id="forecast-icon-4">
@@ -69,7 +69,7 @@
                             <p class="card-text" id="forecast-humidity-4"></p>
                         </div>
                     </div>
-                    <div id="card-5" class="forecast-day-5">
+                    <div id="card-5" class="forecast-day">
                         <div class="card-body p-2">
                             <h6 class="day-title" id="forecast-date-5"></h6>
                             <img class="card-img" id="forecast-icon-5">
